--- a/langs/rust/statement.txt
+++ b/langs/rust/statement.txt
@@ -1,16 +1,23 @@
-unsafe
-static
-mut
-for
-in
-do
-if
-else
-match
-while
+as
 break
-impl
-trait
+do
+else
 enum
-struct
+extern
+for
+if
+impl
+in
 loop
+match
+mod
+proc
+ref
+return
+self
+struct
+super
+trait
+type
+unsafe
+while
